metadata within feature level MIL double dense layers

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 46,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 48,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/resnet50/2023-07-21_resnet50_2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel_testResnet50.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/resnet50/2023-07-21_resnet50_2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel_resnet50_crossval.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 75,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel\n",
+      "2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               ['2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmelaugmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 834  -  label '1': 189\n",
-      "           types_of_recording:            combined_vowels\n",
+      "           participants_file:             2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 887  -  label '1': 214\n",
+      "           types_of_recording:            combined_speech\n",
       "\n",
       "Audio Processing Parameters:\n",
       "           type_of_features:              logmel\n",
@@ -75,24 +75,24 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 2048\n",
+      "           window_length:                 1024\n",
       "           hop_size:                      512\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
       "           hop_size_ms:                   23.22\n",
-      "           window_length_ms:              92.88\n",
+      "           window_length_ms:              46.44\n",
       "           duration_seconds:              5.2\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           model:                         ResNet\n",
+      "           model:                         ResnetMIL\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 sigmoid_focal_loss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                1\n",
+      "           parameter runs:                5\n",
       "           folds per run:                 1\n",
-      "           epochs:                        170\n"
+      "           epochs:                        2\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 76,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 77,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,21 +160,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel\n",
-      "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
+      "2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "{'model': 'ResnetMIL', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': ['2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmelaugmented.pickle'],\n",
-       " 'train_set_label_counts': \"label '0': 834  -  label '1': 189\",\n",
-       " 'types_of_recording': 'combined_vowels'}"
+       " 'participants_file': '2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
+       " 'train_set_label_counts': \"label '0': 887  -  label '1': 214\",\n",
+       " 'types_of_recording': 'combined_speech'}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 78,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3715d1fdc7dc4170af24092fc607c207",
+       "model_id": "abadc14abb3a48c096500f217d54da2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 79,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -242,13 +242,13 @@
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
-      "           smoothing:                     10\n",
-      "           ignore_first_n_epochs:         10\n"
+      "           smoothing:                     0\n",
+      "           ignore_first_n_epochs:         0\n"
      ]
     }
    ],
    "source": [
-    "n_samples = 10\n",
+    "n_samples = 0\n",
     "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 80,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6711a8562064178b8275b4d77cd8b61",
+       "model_id": "7d369d3c40594a48a77258dc8755e40e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,20 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 82,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [122], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\u001b[39;00m\n\u001b[0;32m      2\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[1;32m----> 3\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mboxplot_run_statistics, metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used,\n\u001b[0;32m      6\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m      7\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby,\n\u001b[0;32m      8\u001b[0m                      sort_by_current_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bee4dfd6eaef445c885f3e5f3da9e57e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -354,20 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 83,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [123], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[1;32m----> 2\u001b[0m dropdown_groupby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39moptions, value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      4\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mboxplot_groupedby_combination, metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used,\n\u001b[0;32m      5\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m      6\u001b[0m                      \u001b[38;5;66;03m# group_by_hyperparameter=[\"some\", *tracker.get_only_varied_hyperparam_columns()],\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m                      fontsize\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m),\n\u001b[0;32m     11\u001b[0m                     )\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4bb40b15551549ed8c3cd6c8ad6f4bf0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -394,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 84,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -424,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 85,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -435,20 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 86,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [126], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# if len(options) == 0:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#     options = [None]\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mshow_all_runs, \n\u001b[0;32m      6\u001b[0m                      mode\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m], \n\u001b[0;32m      7\u001b[0m                      metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m     12\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa059db4561e4ed09259f166206c92c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='mode', options=('eval', 'train', 'test'), value='eval'), Dropdown(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -468,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 87,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -486,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 88,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -495,12 +504,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc5eae9750e84021ac2d52ee166cd335",
+       "model_id": "8add57738f75428db8c43006d7a6199e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '7e-05', 'wd': '0.0001', …"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '10', 'lr': '1e-05', 'wd': '0.0001', …"
       ]
      },
      "metadata": {},
@@ -698,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "id": "70aa1f24-0af9-4b63-8ee5-c7e32bf9ad64",
    "metadata": {},
    "outputs": [],
@@ -725,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "id": "f33baa0c-c541-43c3-a2a4-1bec16ba1c43",
    "metadata": {},
    "outputs": [
@@ -733,7 +742,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-07-11_Resnet18_MIL_2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel_MIL_crossval.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-07-22_Resnet18_MIL_2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel_MILdoubleDense_metadata.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
