--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 199,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 200,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/resnet50/2023-07-21_resnet50_2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel_resnet50_crossval.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/001_pretrained_resnet/2023-07-26_resnet18_2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel_baseline_pretrained.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 201,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               ['2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 887  -  label '1': 214\n",
-      "           types_of_recording:            combined_speech\n",
+      "           participants_file:             2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmelaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 842  -  label '1': 220\n",
+      "           types_of_recording:            combined_vowels\n",
       "\n",
       "Audio Processing Parameters:\n",
       "           type_of_features:              logmel\n",
@@ -75,24 +75,24 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 1024\n",
+      "           window_length:                 2048\n",
       "           hop_size:                      512\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
       "           hop_size_ms:                   23.22\n",
-      "           window_length_ms:              46.44\n",
+      "           window_length_ms:              92.88\n",
       "           duration_seconds:              5.2\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           model:                         ResnetMIL\n",
+      "           model:                         ResNet\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 sigmoid_focal_loss\n",
       "\n",
       "Tracker contains:\n",
       "           parameter runs:                5\n",
-      "           folds per run:                 1\n",
-      "           epochs:                        2\n"
+      "           folds per run:                 5\n",
+      "           epochs:                        100\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 202,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 203,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,21 +160,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
-      "{'model': 'ResnetMIL', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
+      "2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel\n",
+      "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': ['2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
-       " 'train_set_label_counts': \"label '0': 887  -  label '1': 214\",\n",
-       " 'types_of_recording': 'combined_speech'}"
+       " 'participants_file': '2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmelaugmented.pickle'],\n",
+       " 'train_set_label_counts': \"label '0': 842  -  label '1': 220\",\n",
+       " 'types_of_recording': 'combined_vowels'}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 204,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abadc14abb3a48c096500f217d54da2f",
+       "model_id": "0e36e1db47104ff98ad29197ec107eb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 205,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -242,13 +242,13 @@
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
-      "           smoothing:                     0\n",
-      "           ignore_first_n_epochs:         0\n"
+      "           smoothing:                     10\n",
+      "           ignore_first_n_epochs:         10\n"
      ]
     }
    ],
    "source": [
-    "n_samples = 0\n",
+    "n_samples = 10\n",
     "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 206,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d369d3c40594a48a77258dc8755e40e",
+       "model_id": "8dbca9f2716d4122b297254df5921f1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 207,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bee4dfd6eaef445c885f3e5f3da9e57e",
+       "model_id": "e132abe7cb2b438f82c5dea4dd078971",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 208,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bb40b15551549ed8c3cd6c8ad6f4bf0",
+       "model_id": "c1fce073e5bd4c6d8ea4439fe065aaf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 209,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 210,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -441,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 211,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa059db4561e4ed09259f166206c92c9",
+       "model_id": "49b488e6a7b7408585701ea12a43894d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 212,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 213,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -504,12 +504,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8add57738f75428db8c43006d7a6199e",
+       "model_id": "a236a087ae9f40a69fd37d8a65c98d98",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '10', 'lr': '1e-05', 'wd': '0.0001', …"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0001', 'lr_decay': '0.…"
       ]
      },
      "metadata": {},
@@ -568,14 +568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 165,
    "id": "1fcbe0eb-c438-4598-8f5a-5ebf4dde519c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "466de1116cf5447aa115d545b50e5d95",
+       "model_id": "d443ea371c1f4aba84956f110a710661",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "id": "d797ed96-d04b-4f14-a724-c679595f6d23",
    "metadata": {},
    "outputs": [
@@ -648,17 +648,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.802886</td>\n",
-       "      <td>0.418401</td>\n",
-       "      <td>0.858624</td>\n",
-       "      <td>0.44108</td>\n",
-       "      <td>0.442406</td>\n",
-       "      <td>0.373644</td>\n",
-       "      <td>0.418534</td>\n",
-       "      <td>0.543415</td>\n",
-       "      <td>0.894411</td>\n",
-       "      <td>0.105589</td>\n",
-       "      <td>0.456585</td>\n",
+       "      <td>0.867506</td>\n",
+       "      <td>0.648096</td>\n",
+       "      <td>0.784615</td>\n",
+       "      <td>0.480693</td>\n",
+       "      <td>0.650888</td>\n",
+       "      <td>0.34874</td>\n",
+       "      <td>0.531034</td>\n",
+       "      <td>0.7793</td>\n",
+       "      <td>0.7854</td>\n",
+       "      <td>0.2146</td>\n",
+       "      <td>0.2207</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -666,28 +666,96 @@
       ],
       "text/plain": [
        "    auc_roc      loss  accuracy  f1_score  auc_prec_recall  precision  \\\n",
-       "0  0.802886  0.418401  0.858624   0.44108         0.442406   0.373644   \n",
+       "0  0.867506  0.648096  0.784615  0.480693         0.650888    0.34874   \n",
        "\n",
-       "   tpr_at_95       tpr       tnr       fpr       fnr  \n",
-       "0   0.418534  0.543415  0.894411  0.105589  0.456585  "
+       "   tpr_at_95     tpr     tnr     fpr     fnr  \n",
+       "0   0.531034  0.7793  0.7854  0.2146  0.2207  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(tracker.crossval_runs[0].best_performance_mean[\"test\"], index=[0])\n"
+    "pd.DataFrame(tracker.crossval_runs[0].best_performance_mean[\"test\"], index=[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "cc37fdb2-7346-4eb9-8fe7-9b22bf0bfc6d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>auc_roc</th>\n",
+       "      <th>loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>auc_prec_recall</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>tpr_at_95</th>\n",
+       "      <th>tpr</th>\n",
+       "      <th>tnr</th>\n",
+       "      <th>fpr</th>\n",
+       "      <th>fnr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.008607</td>\n",
+       "      <td>0.003618</td>\n",
+       "      <td>0.020239</td>\n",
+       "      <td>0.016401</td>\n",
+       "      <td>0.003802</td>\n",
+       "      <td>0.022706</td>\n",
+       "      <td>0.006897</td>\n",
+       "      <td>0.036808</td>\n",
+       "      <td>0.027567</td>\n",
+       "      <td>0.027567</td>\n",
+       "      <td>0.036808</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    auc_roc      loss  accuracy  f1_score  auc_prec_recall  precision  \\\n",
+       "0  0.008607  0.003618  0.020239  0.016401         0.003802   0.022706   \n",
+       "\n",
+       "   tpr_at_95       tpr       tnr       fpr       fnr  \n",
+       "0   0.006897  0.036808  0.027567  0.027567  0.036808  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(tracker.crossval_runs[0].best_performance_std[\"test\"],  index=[0])"
+   ]
   },
   {
    "cell_type": "code",
@@ -707,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "70aa1f24-0af9-4b63-8ee5-c7e32bf9ad64",
    "metadata": {},
    "outputs": [],
@@ -734,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "id": "f33baa0c-c541-43c3-a2a4-1bec16ba1c43",
    "metadata": {},
    "outputs": [
@@ -742,7 +810,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-07-22_Resnet18_MIL_2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel_MILdoubleDense_metadata.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/metadataMILDDense/2023-07-23_Resnet18_MIL_2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel_MIL_DDense_metadata_crossval.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
