several small updates for optimizing test runs
+ ignoring all documentation

--- a/python/Jupyter_Notebooks/_linear_regression_predictions.ipynb
+++ b/python/Jupyter_Notebooks/_linear_regression_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 1,
    "id": "481d4a51-353d-4f68-92c4-4312083795c8",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 2,
    "id": "2bf1c34c-351b-453c-9413-0725c8b0ea4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 3,
    "id": "4e9e3099-d7ef-41f5-b23f-072ac22a9997",
    "metadata": {},
    "outputs": [],
@@ -51,18 +51,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42d85a01-5430-4d96-8220-0ea75eecd054",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### remove vowels because this was not in the dicova challenge"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 73,
+   "id": "64c60061-2504-45d2-a332-59ce54e69a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# id_performance.df = id_performance.df[id_performance.df.rec_type != \"combined_vowels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "7617b0a2-5c8c-475c-9037-4a64137854b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2888"
+       "2203"
       ]
      },
-     "execution_count": 547,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 12,
    "id": "8cc85291-d302-41b2-96e8-69d045d319a0",
    "metadata": {},
    "outputs": [],
@@ -84,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 13,
    "id": "657d7893-83e8-49fd-b626-b114a41f2128",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(356, 466)"
+       "(355, 466)"
       ]
      },
-     "execution_count": 549,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,18 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 14,
    "id": "fd776f7b-1d01-4ce6-b88a-db4d2e593e4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['combined_breaths', 'combined_coughs', 'combined_speech',\n",
-       "       'combined_vowels'], dtype=object)"
+       "array(['combined_breaths', 'combined_coughs', 'combined_speech'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 15,
    "id": "7488156e-8c24-4a36-8766-b886dea28553",
    "metadata": {
     "tags": []
@@ -194,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 16,
    "id": "5965a12f-ebe9-44cd-9eef-75a99599b87c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.10253654, 0.00629406, 0.17058913, 0.16971987])"
+       "array([0.10253654, 0.00629406, 0.17058913, 0.        ])"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 17,
    "id": "a8305e6f-5d69-4b2f-bb7e-ebc2a1e2fe49",
    "metadata": {
     "tags": []
@@ -249,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 18,
    "id": "1d9493a6-33f4-41d5-8d43-df3a4049f19f",
    "metadata": {
     "tags": []
@@ -266,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 19,
    "id": "8456d629-29b0-4a66-90d8-c96ad7d603c9",
    "metadata": {
     "tags": []
@@ -288,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 20,
    "id": "d0f33e84-4a0a-45b8-b02b-3a1997d13fa1",
    "metadata": {
     "tags": []
@@ -339,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 21,
    "id": "49238472-05d3-4c68-996c-f14a0017fb00",
    "metadata": {
     "tags": []
@@ -352,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 44,
    "id": "ce18eb1f-f4b5-478b-9437-b72c14cf3345",
    "metadata": {
     "tags": []
@@ -370,37 +390,37 @@
     "    cuberoots = np.power(absolute, 1/3)\n",
     "    power_four = np.power(A, 4)\n",
     "    power_five = np.power(A, 5)\n",
-    "    # return np.concatenate((A, squares, roots), axis=1)    \n",
-    "    return np.concatenate((A, squares, roots, cubes, cuberoots), axis=1)    \n",
+    "    return np.concatenate((A, squares, roots), axis=1)    \n",
+    "    # return np.concatenate((A, squares, roots, cubes, cuberoots), axis=1)    \n",
     "    # return np.concatenate((A, bias), axis=1)\n",
     "    # return A\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 66,
    "id": "fac24417-76c1-48f2-bf68-8af55274a168",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allow_n_missing_recordings=1\n",
+    "allow_n_missing_recordings=2\n",
     "A_val, y_val, _ = get_linregr_matrices(eval_ids, eval_data, allow_n_missing_recordings=allow_n_missing_recordings)\n",
     "A_test, y_test, _ = get_linregr_matrices(test_ids, test_data, allow_n_missing_recordings=allow_n_missing_recordings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 67,
    "id": "aac753ee-0746-4c29-902b-ecccd0165738",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(275, 453)"
+       "(294, 464)"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 68,
    "id": "c54d78e3-1877-4636-ae6b-5236e70b7048",
    "metadata": {},
    "outputs": [],
@@ -422,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 69,
    "id": "6e29c90b-1aa8-4f0c-b134-1d2191e8cc83",
    "metadata": {},
    "outputs": [],
@@ -433,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 70,
    "id": "783e46c6-55c3-4adb-95e3-7d2db4e5c290",
    "metadata": {},
    "outputs": [],
@@ -443,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 71,
    "id": "05d2528e-edd4-4e66-95c7-2dcb9478b240",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(91.9, 89.1)"
+       "(90.3, 87.1)"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,17 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 72,
    "id": "be371ddf-2593-4510-9b50-109a1c82c8b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(90.7, 91.4)"
+       "(88.9, 91.2)"
       ]
      },
-     "execution_count": 596,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
