--- a/python/Jupyter_Notebooks/feature set insights.ipynb
+++ b/python/Jupyter_Notebooks/feature set insights.ipynb
@@ -41,12 +41,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "346f2d4a11574e7fb20cd44d3b0fd70a",
+       "model_id": "7122b6ac902247efab3382e291280ef9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(options=('2022-12-08-logmel_1_channel_augmented_noBadAudio.pickle', '2022-12-08-logmel_1_channel_noAu…"
+       "Dropdown(options=('2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle', '2023_0…"
       ]
      },
      "metadata": {},
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fe071525-01f3-47f8-8ba5-9857f3d2cf2c",
    "metadata": {},
    "outputs": [
@@ -79,21 +79,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/Coswara_processed/pickles/2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel.pickle\n",
+      "data/Coswara_processed/pickles/2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
       "\n",
-      "Feature Set - #Participants: 1770\n",
+      "Feature Set - #Participants: 1924\n",
       "----------------------------------------------------\n",
       "type_of_features:    logmel\n",
       "n_time_steps:        224\n",
       "n_features:          224\n",
       "sample_rate:         22050\n",
       "n_fft:               8192\n",
-      "window_length:       2048\n",
+      "window_length:       1024\n",
       "hop_size:            512\n",
       "fmin:                0\n",
       "fmax:                11025\n",
       "hop_size_ms:         23.22\n",
-      "window_length_ms:    92.88\n",
+      "window_length_ms:    46.44\n",
       "duration_seconds:    5.2\n",
       "fft_res_hz:          2.69\n",
       "-------------------Augmentations--------------------\n",
@@ -137,7 +137,7 @@
     "# plot the distribution of the durations of the recordings in the dataset\n",
     "durations = [p.recordings[dataset.types_of_recording].original_duration_trimmed_silence for p in dataset.participants]\n",
     "plt.hist(durations, 100), plt.title(f\"Durations of the >{dataset.types_of_recording}< recordings after trimming the silence\")\n",
-    "plt.grid(), plt.xlabel(\"duration [s]\")\n",
+    "plt.grid(), plt.xlabel(\"duration [s]\"), plt.xlabel(\"count\")\n",
     "plt.xlim([0, 45])"
    ]
   },
