--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 136,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 213,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/020_metadata_MIL/removedCovidTestMEtadata/2023-09-12_Resnet18_MIL_2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel_metadataMIL_excludedTypeOfTest_saveweights.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/012_n_time_steps/2023-08-14_resnet18_2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel_n_time_steps.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 214,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel\n",
+      "2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_08_27_logmel_combined_vowels_23msHop_92msFFT_fullDicovaTestSet.pickle\n",
-      "           augmented_files:               ['2023_08_12_logmel_combined_vowels__00_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle', '2023_08_13_logmel_combined_vowels__01_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle', '2023_08_13_logmel_combined_vowels__02_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle', '2023_08_14_logmel_combined_vowels__03_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle', '2023_08_14_logmel_combined_vowels__00_23msHop_96msFFT_fmax11000_1xNeg_0xPos_augmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 718  -  label '1': 200\n",
-      "           types_of_recording:            combined_vowels\n",
+      "           participants_file:             2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_07_17_logmel_combined_speech_01_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle', '2023_07_17_logmel_combined_speech_02_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle', '2023_07_17_logmel_combined_speech_03_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle', '2023_07_17_logmel_combined_speech_04_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle', '2023_07_17_logmel_combined_speech_10_23msHop_46msFFT_fmax11000_224logmel_1x0xaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 757  -  label '1': 246\n",
+      "           types_of_recording:            combined_speech\n",
       "\n",
       "Audio Processing Parameters:\n",
       "           type_of_features:              logmel\n",
@@ -75,24 +75,24 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 2048\n",
+      "           window_length:                 1024\n",
       "           hop_size:                      512\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
       "           hop_size_ms:                   23.22\n",
-      "           window_length_ms:              92.88\n",
+      "           window_length_ms:              46.44\n",
       "           duration_seconds:              5.2\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           model:                         ResnetMIL\n",
+      "           model:                         ResNet\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 sigmoid_focal_loss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                1\n",
-      "           folds per run:                 5\n",
-      "           epochs:                        1\n"
+      "           parameter runs:                16\n",
+      "           folds per run:                 3\n",
+      "           epochs:                        130\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 215,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 216,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,25 +160,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023_06_25_logmel_combined_vowels_NEW_23msHop_96msFFT_fmax11000_224logmel\n",
-      "{'model': 'ResnetMIL', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
+      "2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_08_27_logmel_combined_vowels_23msHop_92msFFT_fullDicovaTestSet.pickle',\n",
-       " 'augmented_files': ['2023_08_12_logmel_combined_vowels__00_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle',\n",
-       "  '2023_08_13_logmel_combined_vowels__01_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle',\n",
-       "  '2023_08_13_logmel_combined_vowels__02_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle',\n",
-       "  '2023_08_14_logmel_combined_vowels__03_23msHop_96msFFT_fmax11000_0xNeg_1xPos_augmented.pickle',\n",
-       "  '2023_08_14_logmel_combined_vowels__00_23msHop_96msFFT_fmax11000_1xNeg_0xPos_augmented.pickle'],\n",
-       " 'train_set_label_counts': \"label '0': 718  -  label '1': 200\",\n",
-       " 'types_of_recording': 'combined_vowels'}"
+       " 'participants_file': '2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_07_17_logmel_combined_speech_01_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle',\n",
+       "  '2023_07_17_logmel_combined_speech_02_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle',\n",
+       "  '2023_07_17_logmel_combined_speech_03_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle',\n",
+       "  '2023_07_17_logmel_combined_speech_04_23msHop_46msFFT_fmax11000_224logmel_0x1xaugmented.pickle',\n",
+       "  '2023_07_17_logmel_combined_speech_10_23msHop_46msFFT_fmax11000_224logmel_1x0xaugmented.pickle'],\n",
+       " 'train_set_label_counts': \"label '0': 757  -  label '1': 246\",\n",
+       " 'types_of_recording': 'combined_speech'}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 217,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad6cbbdb53ce4fe9a7ec0b0bd9f3c41f",
+       "model_id": "31bbe1b535d44c92b7f42ae1c4544719",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 218,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -246,13 +246,13 @@
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
-      "           smoothing:                     0\n",
-      "           ignore_first_n_epochs:         0\n"
+      "           smoothing:                     10\n",
+      "           ignore_first_n_epochs:         10\n"
      ]
     }
    ],
    "source": [
-    "n_samples = 0\n",
+    "n_samples = 10\n",
     "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 219,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d07b6235d1d49f7bc700bde3df3e7b8",
+       "model_id": "270d04309d224892a88835e366d7088e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,20 +320,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 220,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [44], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\u001b[39;00m\n\u001b[0;32m      2\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[1;32m----> 3\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mboxplot_run_statistics, metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used,\n\u001b[0;32m      6\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m      7\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby,\n\u001b[0;32m      8\u001b[0m                      sort_by_current_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79ae6494a8e448f287e637a25435d2b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -358,10 +361,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d56be91a15e54957a8053d8683640831",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "options = tracker.get_only_varied_hyperparam_columns()\n",
     "dropdown_groupby = widgets.Dropdown(options=options, value=options[0])\n",
@@ -386,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -416,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -427,10 +445,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b184bad34704461fb65f54bf6e77636e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='mode', options=('eval', 'train', 'test'), value='eval'), Dropdown(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "options = tracker.get_only_varied_hyperparam_columns()\n",
     "# if len(options) == 0:\n",
@@ -448,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -466,12 +499,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98600c95377f434984de554c5e2288bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0003', 'lr_decay': '0.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
@@ -524,14 +572,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 194,
    "id": "1fcbe0eb-c438-4598-8f5a-5ebf4dde519c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a6e991cf7e94be081f7a6477573448c",
+       "model_id": "bb2d278e3bb44450b39a1011b9bb3c1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,10 +611,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "d797ed96-d04b-4f14-a724-c679595f6d23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>auc_roc</th>\n",
+       "      <th>loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>auc_prec_recall</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>tpr_at_95</th>\n",
+       "      <th>tpr</th>\n",
+       "      <th>tnr</th>\n",
+       "      <th>fpr</th>\n",
+       "      <th>fnr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.793491</td>\n",
+       "      <td>0.30761</td>\n",
+       "      <td>0.89377</td>\n",
+       "      <td>0.511413</td>\n",
+       "      <td>0.56167</td>\n",
+       "      <td>0.622258</td>\n",
+       "      <td>0.465321</td>\n",
+       "      <td>0.436608</td>\n",
+       "      <td>0.960566</td>\n",
+       "      <td>0.039434</td>\n",
+       "      <td>0.563392</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    auc_roc     loss  accuracy  f1_score  auc_prec_recall  precision  \\\n",
+       "0  0.793491  0.30761   0.89377  0.511413          0.56167   0.622258   \n",
+       "\n",
+       "   tpr_at_95       tpr       tnr       fpr       fnr  \n",
+       "0   0.465321  0.436608  0.960566  0.039434  0.563392  "
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame(tracker.crossval_runs[0].best_performance_mean[\"test\"], index=[0])"
    ]
@@ -599,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 196,
    "id": "70aa1f24-0af9-4b63-8ee5-c7e32bf9ad64",
    "metadata": {},
    "outputs": [],
@@ -626,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 197,
    "id": "f33baa0c-c541-43c3-a2a4-1bec16ba1c43",
    "metadata": {},
    "outputs": [
@@ -634,7 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/020_metadata_MIL/removedCovidTestMEtadata/2023-09-12_Resnet18_MIL_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel_metadataMIL_excludedTypeOfTest_saveweights.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/012_n_time_steps/MIL comparison/2023-08-18_Resnet18_MIL_2023_06_25_logmel_combined_speech_NEW_23msHop_46msFFT_fmax11000_224logmel_MIL_224_extended.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
